clusters/my-cluster/rustfs/localhost-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-localhost-rustfs
  namespace: rustfs
spec:
  stripPrefix:
    prefixes:
      - /rustfs
